--- a/server/frontend/src/components/Register/Register.css
+++ b/server/frontend/src/components/Register/Register.css
@@ -1,65 +1,45 @@
-.register_container{
-  display: flex;
-  flex-direction: column;
+/* Register.css */
+.register-container {
+  max-width: 400px;
   margin: auto;
-  margin-top: 2%;
-  background-color: darkturquoise;
-  min-width: 350px;
-  width: 30%;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  box-shadow: 0 0 1em #ccc;
 }
 
-.inputs{
+.register-container h1 {
+  text-align: center;
+}
+
+.register-container form {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
-.input{
-  display: flex;
-  flex-direction:row;
-  align-items: center;
+.register-container label {
+  margin: 0.5em 0 0.2em;
 }
 
-.input_field{
-  height:40px;
-  width:200px;
-  margin:.5cm;
-  font-size: medium;
+.register-container input {
+  padding: 0.5em;
+  margin-bottom: 1em;
 }
 
-.submit_panel{
-  display: flex;
-  flex-direction:column;
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-.submit{
-  margin-left: 30%;
-  margin-right: 30%;
-  cursor: pointer;
-  font-size: large;
-  color: rgb(97, 64, 128);
-  border-radius: 10px;
-  height:50px;
-}
-
-.submit:hover {
-  background-color: wheat;
-}
-
-.header{
-  font: 4em sans-serif;
+.register-container button {
+  padding: 0.5em;
+  background-color: #007bff;
   color: white;
-  margin: .5cm;
+  border: none;
+  border-radius: 0.3em;
+  cursor: pointer;
 }
 
-.img_icon{
-  width:40px;
-  margin:.1cm;
-  background-color:#0C9;
-  color:#FFF;
-  border-radius:50px;
-  text-align:center;
-  box-shadow: 2px 2px 3px #999;  
+.register-container button:hover {
+  background-color: #0056b3;
+}
+
+.error {
+  color: red;
+  text-align: center;
 }
