--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,3 +1,9 @@
+body {
+  background-image: #F4F6F6;
+}
+.div-main{
+  background-color:#f9f9f9;
+}
 img{
   width: 60%;
   align-self: center;
@@ -25,6 +31,7 @@ img{
 
 .container{
   justify-content: center;
+  
 }
 .details{
   font-size: 20px;
@@ -59,6 +66,7 @@ img{
   align-items: center;
   justify-content: center;
   flex:1
+  
 }
 
 .form_panel {
